insertando compras en bd

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI_TEST=mongodb+srv://juanmpplancer:antho2212@juan-db.nbsvdfp.mongodb.net/prueba?retryWrites=true&w=majority&appName=Juan-DB
+MONGO_URI_TEST=mongodb+srv://juanmpplancer:antho2212@juan-db.nbsvdfp.mongodb.net/proyecto?retryWrites=true&w=majority&appName=Juan-DB
 ACCES_TOKEN_SECRET=backendmongo1
 EMAIL_PASS=tbfhzfriuyqpwwqj
 EMAIL_USER=juanmpplancer@gmail.com
