--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URI_TEST=mongodb+srv://juanmpplancer:antho2212@juan-db.nbsvdfp.mongodb.net/proyecto?retryWrites=true&w=majority&appName=Juan-DB
+MONGO_URI_PROD=mongodb+srv://juanmpplancer:antho2212@juan-db.nbsvdfp.mongodb.net/proyecto-prod?retryWrites=true&w=majority&appName=Juan-DB
 ACCES_TOKEN_SECRET=backendmongo1
 EMAIL_PASS=tbfhzfriuyqpwwqj
 EMAIL_USER=juanmpplancer@gmail.com
